# opensearch-requests

./: .gitignore  README.md  pyproject.toml
opensearch_requests/search/aggregations/: __init__.py  base.py  bucket.py  metric.py  options.py
opensearch_requests/search/queries/: __init__.py  base.py  boolean.py  enums.py  full_text.py  match_all.py  options.py  term.py
opensearch_requests/search/result/: __init__.py
