[tool.poetry]
authors = ["Vagiz Duseev <vagiz@duseev.com>"]
description = "Strongly typed OpenSearch client based on pydantic"
documentation = "https://github.com/vduseev/opensearch-requests"
homepage = "https://github.com/vduseev/opensearch-requests"
keywords = ["opensearch", "pydantic", "typing"]
license = "Apache-2.0"
maintainers = ["Vagiz Duseev <vagiz@duseev.com>"]
name = "opensearch-requests"
packages = [
  {include = "opensearch_requests"},
]
readme = "README.md"
repository = "https://github.com/vduseev/opensearch-requests"
version = "0.0.12"

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0"
typing-extensions = "^4"
opensearch-py = "^2.6.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = {version = ">=20", allow-prereleases = true}
bump2version = ">=1.0"
debugpy = "^1.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.8"]

[tool.black]
line-length = 120
